# Thesis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  localpackages.tex  log2.tx  main.aux  main.lof  main.out  main.tex  main.toc  titlepage.tex
deep_space/: CMakeLists.txt  camera.cpp  camera.h  command_queue.h  component_manager.h  context.cpp  context.h  deep_space.h  graphical_context.cpp  graphical_context.h  graphical_device.h  noise.h  pipeline.cpp  pipeline.h  runtime_exception.h  scene_manager.h  shader.cpp  shader.h  shader_builder.cpp  shader_builder.h  transform.cpp  transform.h  version.h  version.h.in  vertices.h  window.cpp  window.h
deep_space/components/: camera_manager.cpp  camera_manager.h  compute_program.cpp  compute_program.h  cubemap.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  program.cpp  program.h  shader_buffer.cpp  shader_buffer.h  texture.cpp  texture.h  uniform_buffer.h
deep_space/entities/: asteroid.h  black_hole.h  hdr_source.h  noise.h  noise_mesh.h  planet.h  space_background.h  spacebox.h  spinner.h  star.h  starpoint.h  steroid.h
deep_space/glad/: CMakeLists.txt
deep_space/meshes/: asteroid.cpp  cube.cpp  grid.cpp  plane.cpp  quad.cpp  rock.cpp  simplex.cpp  sphere.cpp
deep_space/node/: node.cpp  node.h  node_context.cpp  node_context.h
deep_space/noises/: marching_cube.cpp  marching_cube.h  marching_cube_constants.cpp  simplex_2d.cpp  simplex_3d.cpp  simplex_3d.h  worley.cpp  worley.h
deep_space/opengl/: generic_container.h  graphical_device_gl.cpp  (+1 more)
demo/: CMakeLists.txt  gui.h  main.cpp
(+54 files in other folders)
